--- a/d3.js/pie.html
+++ b/d3.js/pie.html
@@ -5,6 +5,38 @@
     </head> 
 	<body>  
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>  
+		<script>
+			var width = 500;
+			var height = 500;
+			var dataset = [1,2,3,4,5,6];
+			var svg = d3.select("body")
+						.append("svg")
+						.attr("width",width)
+						.attr("height",height);
+			var pie = d3.layout.pie();
+			var piedata = pie(dataset);
+			var outerRadius = 200;
+			var innerRadius = 0;
+
+			var arc = d3.svg.arc()
+						.innerRadius(innerRadius)
+						.outerRadius(outerRadius);
+			var color = d3.scale.category20();
+			var arcs = svg.selectAll("g")
+					  .data(piedata)
+					  .enter()
+					  .append("g")
+					  .attr("transform","translate("+ (width/2) +","+ (width/2) +")");
+					  
+			arcs.append("path")
+				.attr("fill",function(d,i){
+					return color(i);
+				})
+				.attr("d",function(d){
+					return arc(d);
+				});
 		
+
+		</script>
 	</body>  
 </html>  
