--- a/d3.js/pie.html
+++ b/d3.js/pie.html
@@ -35,7 +35,14 @@
 				.attr("d",function(d){
 					return arc(d);
 				});
-		
+			arcs.append("text")
+				.attr("transform",function(d){
+					return "translate(" + arc.centroid(d) + ")";
+				})
+				.attr("text-anchor","middle")
+				.text(function(d){
+					return d.data;
+				});
 
 		</script>
 	</body>  
