--- a/GoJS/model.html
+++ b/GoJS/model.html
@@ -21,13 +21,18 @@
 			  		initialContentAlignment: go.Spot.Center,
 			  		"undoManager.isEnabled": true,
 			  		layout: $(go.TreeLayout, 
-                		{ angle: 90, layerSpacing: 35 })
+                		{ angle: 90, layerSpacing: 35 }),
+			  		"toolManager.mouseWheelBehavior":go.ToolManager.WheelZoom
 			  	});
 			myDiagram.nodeTemplate =
 			$(go.Node, "Auto",
 				$(go.Shape,"RoundedRectangle",
-		    	{fill:$(go.Brush,"Linear",
-                  { 0.0:"Violet",0.5:'lightblue',1.0:"Lavender" })}),
+		    	{
+		    		fill:$(go.Brush,"Linear",
+                  { 
+                  	0.0:"Violet",0.5:'lightblue',1.0:"Lavender"
+                  })
+		    	}),
 			  // $(go.Node, "Horizontal",
 			    // { background: "#44CCFF" },
 			    // $(go.Picture,
@@ -35,14 +40,28 @@
 			      // new go.Binding("source")),
 			    $(go.TextBlock,
 			      "Default Text", 
-			      { margin: 12, stroke: "white", font: "bold 16px sans-serif" },
-			      new go.Binding("text", "name"))
-			  );
+			      { 
+			      	  text:"textAlign:'center'",
+			      	  margin: 12, 
+			      	  stroke: "white", 
+			      	  font: "bold 16px sans-serif" ,
+			      	  width:200,
+				      wrap:go.TextBlock.WrapFit,
+				      editable: true
+				  },
+				      new go.Binding("text", "name"))
+				  );
 
 			myDiagram.linkTemplate =
 			  $(go.Link,
 			    { routing: go.Link.Orthogonal, corner: 5 },
-			    $(go.Shape, { strokeWidth: 3, stroke: "#555" })); 
+			    $(go.Shape, { strokeWidth: 3, stroke: "#555" }),
+			    $(go.Shape,  {
+			    	toArrow:'OpenTriangle',
+			    	fill:null, 
+			    	stroke: "#555",
+			    	strokeWidth:3 })
+			    ); 
 			  
 			var model = $(go.TreeModel);
 			model.nodeDataArray =
