--- a/plumb/plumb.html
+++ b/plumb/plumb.html
@@ -14,9 +14,18 @@
 	<div class="content">
 		<div id="myPaletteDiv"></div>
 		<div id="myDiagramDiv"></div>
-		
 	</div>
 	<div id="myOverviewDiv"></div>
+    <div id="edit-content">
+        <div class="mask"></div>
+        <div class="content-box">
+            <p id="content-title">Edit question name</p>
+            <input id="content-text" type="text" value="请输入文字" />
+            <p id="content-del">Delete 'Do Something?'?</p>
+            <button id="btn-cancel">Cancel</button>
+            <button id="btn-ok">OK</button>
+        </div>
+    </div>
 </body>
 <script src="go.js"></script>
 <script src="main.js"></script>
