--- a/plumb/plumb.html
+++ b/plumb/plumb.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>plumb</title>
+    <title>flowchart</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="cache-control" content="no-cache">
@@ -20,7 +20,7 @@
         <div class="mask"></div>
         <div class="content-box">
             <p id="content-title">Edit question name</p>
-            <input id="content-text" type="text" value="请输入文字" />
+            <input id="content-text" type="text" value="" />
             <p id="content-del">Delete 'Do Something?'?</p>
             <button id="btn-cancel">Cancel</button>
             <button id="btn-ok">OK</button>
