--- a/plumb/plumb.html
+++ b/plumb/plumb.html
@@ -14,6 +14,10 @@
 	<div class="content">
 		<div id="myPaletteDiv"></div>
 		<div id="myDiagramDiv"></div>
+        <div id="topBar"></div>
+        <div id="bottomBar"></div>
+        <div id="rightBar"></div>
+        <div id="leftBar"></div>
 	</div>
 	<div id="myOverviewDiv"></div>
     <div id="edit-content">
